tests/negative/import_missing.sans
// expect-error: undefined variable
main() I {
  z = abc_not_defined + 42
  z
}
